# shooting_model_basketball

./: .dockerignore  .env.example  .env.local.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  security.yml
data/players/: player-42.json
docs/: agentic-frameworks-comparison.md  agentic-frameworks-critique.md
docs/adr/: 001-agentic-architecture.md
infra/scripts/: bootstrap.sh  deploy.sh
infra/terraform/: cloud_run.tf  iam.tf  main.tf  outputs.tf  project.tf  registry.tf  secrets.tf  variables.tf
infra/terraform/environments/dev/: terraform.tfvars
legacy/: README.md  app.py  fastap.py
legacy/utils/: metrics.py  video_processor.py
models/: cnn_model.py  ml_model.py
scripts/: benchmark_pose.py  local_e2e.sh  smoke_test.sh
src/agents/: __init__.py  memory.py  orchestrator.py  state.py
src/agents/tools/: __init__.py  analysis_tools.py  coach_tools.py  memory_tools.py  perception_tools.py  planner_tools.py
src/analysis/: biomechanics.py  shot_detector.py
src/api/: main.py  store.py
src/api/middleware/: auth.py
src/api/routes/: __init__.py  analyze.py  health.py  players.py
src/api/schemas/: __init__.py  domain.py  responses.py
src/core/: config.py  exceptions.py  logging.py
src/perception/: pose_estimator.py  video_pipeline.py
src/vlm/: __init__.py  base.py  basketball_analyzer.py  evaluator.py  gemini_client.py  litellm_client.py
src/vlm/prompts/: basketball.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_biomechanics.py  test_perception.py  test_schemas.py  test_shot_detector.py  test_vlm.py
utils/: data_loader.py  data_preprocessor.py  video_processor.py
