[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shoot-ai"
version = "1.0.3"
description = "Real-time basketball intelligence platform powered by computer vision and agentic AI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "Al-khali" }
]
keywords = ["basketball", "computer-vision", "pose-estimation", "AI", "coaching", "sports-analytics"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Vision & Perception
  "opencv-python-headless>=4.9.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",

  # Pose estimation
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "ultralytics>=8.2.0",    # YOLOv11-pose (primary estimator for POC)
  "mediapipe>=0.10.0",     # MediaPipe BlazePose (benchmark candidate)

  # ML & Analysis
  "scikit-learn>=1.4.0",
  "scipy>=1.12.0",

  # API
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
  "websockets>=12.0",

  # Data validation & settings
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",

  # Agentic AI
  "langgraph>=0.1.0",
  "langchain-core>=0.2.0",

  # VLM clients
  "google-generativeai>=0.7.0",
  "openai>=1.30.0",

  # Observability
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",        # async test client for FastAPI
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pip-audit>=2.7.0",     # Python package CVE scanning
  "bandit[toml]>=1.7.0",  # Python SAST
  "anyio[trio]>=4.0.0",   # async test runner
]
mlops = [
  "wandb>=0.17.0",
  "mlflow>=2.13.0",
  "dvc>=3.50.0",
]

[project.urls]
Homepage = "https://github.com/Al-khali/shooting_model_basketball"
Repository = "https://github.com/Al-khali/shooting_model_basketball"
Issues = "https://github.com/Al-khali/shooting_model_basketball/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["legacy/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=0 -v"

# --- Mypy ---
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# --- Bandit (SAST) ---
[tool.bandit]
exclude_dirs = ["tests", "legacy"]
skips = [
  "B104",  # hardcoded_bind_all_interfaces — intentional for containerised API (Cloud Run)
  # B101 (assert): removed — tests/ already excluded, assert in prod code is risky (stripped by -O)
  # B603 (subprocess): removed — no subprocess in src/; use # nosec B603 at call site if ever needed
]
